2004-05-24  Mark Kettenis  <kettenis@gnu.org>
 
	From Miod Vallat <miod@online.fr>:
	* m88kopenbsd.c: New file.
	* targets.c (m88k_openbsd_vec): New.
	* config.bfd: Add m88k-*-openbsd*.
	* configure.in (m88k-*-openbsd*): Set COREFILE to netbsd-core.lo.
	(m88kopenbsd_vec): New.
	* configure: Regenerate.
	* Makefile.am (BFD32_BACKENDS): Add m88kopenbsd.lo.
	(BFD32_BACKENDS_CFILES): Add m88kopenbsd.c.
	Run "make dep-am".
	* Makefile.in: Regenerate.
	* po/SRC-POTFILES.in: Regenerate.

2004-05-24  Nick Clifton  <nickc@redhat.com>

	* hash.c: Remove bogus node "Changing the default Hash Table Size"
	introduced by hash table size patch.

2004-05-22  Ben Elliston  <bje@au.ibm.com>

	* configure.in (is_release): Remove.
	(bfd_version_date, bfd_version, bfd_version_string): Likewise.
	(AC_OUTPUT): Don't output bfdver.h from version.h.
	* configure: Regenerate.
	* Makefile.am (RELEASE): New variable.
	(bfdver.h): New target.
	* Makefile.in: Regenerate.
	* doc/Makefile.in: Likewise.

2004-05-22  Ben Elliston  <bje@au.ibm.com>

	* Makefile.am (config.status): Don't depend on version.h.
	* Makefile.in: Regenerate.

2004-05-22  Alan Modra  <amodra@bigpond.net.au>

	* merge.c (_bfd_merged_section_offset): Remove "addend" param.
	* libbfd-in.h (_bfd_merged_section_offset): Adjust prototype.
	* libbfd.h: Regenerate.
	* elf.c (_bfd_elf_rela_local_sym): Adjust call.
	(_bfd_elf_rel_local_sym): Likewise.
	* elflink.c (_bfd_elf_link_sec_merge_syms): Likewise.
	(elf_link_input_bfd): Likewise.
	* elf32-ppc.c (ppc_elf_relax_section): Likewise.
	* elf64-alpha.c (elf64_alpha_relocate_section): Likewise.
	* elfxx-ia64.c (elfNN_ia64_relax_section): Likewise.
	(elfNN_ia64_relocate_section): Likewise.

2004-05-21  Andy Chittenden  <achittenden@bluearc.com>

	* hash.c (bfd_default_hash_table_size): New variable.
	(bfd_hash_table_init): Use new variable instead of DEFAULT_SIZE.
	(bfd_hash_set_default_size): New function.  Set the default size